fix jump

--- a/index.css
+++ b/index.css
@@ -2,6 +2,7 @@ body {
   min-width: 800px;
 }
 .header {
+    min-width:800px;;
     display: flex;
     height: 40px;
     background-color: black;
@@ -42,8 +43,8 @@ body {
 }
 
 .jump {
-  transform: translate(10%, -10%);
-    animation: jump 0.3s linear;
+  transform: translate(10%, 10%);
+    animation: jump 0.5s linear;
 }
 
 @keyframes jump {
@@ -52,15 +53,15 @@ body {
     }
 
     30% {
-        top: 180px;
+        top: 170px;
     }
 
     50% {
-        top: 120px;
+        top: 100px;
     }
 
     80% {
-        top: 180px;
+        top: 170px;
     }
 
     100% {
